# easynav_outdoor_testcase

./: CMakeLists.txt  package.xml
launch/: summit.launch.py
maps/: elevation.pgm  mic.navmap  mic_map.yaml  mic_map_elevation.pgm  pointcloud_map.pcd  pool.yaml  urjc.navmap  urjc_map.yaml  urjc_map_elevation.pgm
robots_params/: gridmap.lidarlsam.params.yaml  maps_builder.params.yaml  maps_manager.params.yaml  navmap.lidarslam.params.yaml  navmap.local.lidarslam.params.yaml  navmap_bonxai.dummy.params.yaml  pcd_builder.params.yaml  summit_gridmap_dummy_params.yaml  summit_gridmap_ls_params.yaml
