<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>easynav_outdoor_testcase</name>
  <version>0.0.1</version>
  <description>Easy Navigation: Outdoor Testcase.</description>
  <maintainer email="e.aguado.glez@gmail.com">Esther Aguado Gonzalez</maintainer>
  <license>GPL-3.0-only</license>

  <depend>easynav_gridmap_maps_builder</depend>
  <depend>easynav_octomap_maps_builder</depend>
  <depend>easynav_pointcloud_maps_builder</depend>
  <depend>easynav_common</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

</package>
